--- a/i18n/en_US.yaml
+++ b/i18n/en_US.yaml
@@ -496,15 +496,26 @@ ui:
   how_to_format:
     title: How to Format
     desc: >-
-      <ul class="mb-0"><li><p class="mb-2">to make links</p><pre
-      class="mb-2"><code>&lt;https://url.com&gt;<br/><br/>[Title](https://url.com)</code></pre></li><li><p
-      class="mb-2">put returns between paragraphs</p></li><li><p
-      class="mb-2"><em>_italic_</em> or **<strong>bold</strong>**</p></li><li><p
-      class="mb-2">indent code by 4 spaces</p></li><li><p class="mb-2">quote by
-      placing <code>&gt;</code> at start of line</p></li><li><p
-      class="mb-2">backtick escapes <code>`like _this_`</code></p></li><li><p
-      class="mb-2">create code fences with backticks <code>`</code></p><pre
-      class="mb-0"><code>```<br/>code here<br/>```</code></pre></li></ul>
+      <ul class="mb-0">
+      <li><p class="mb-2">To make links</p>
+      <pre class="mb-2"><code>&lt;https://url.com&gt;<br/><br/>[Title](https://url.com)</code></pre>
+      </li>
+      <li>
+      <p class="mb-2">Put returns between paragraphs</p>
+      </li>
+      <li>
+      <p class="mb-2"><em>_italic_</em> or **<strong>bold</strong>**</p>
+      </li>
+      <li>
+      <p class="mb-2">Indent code by 4 spaces</p></li><li>
+      <p class="mb-2">Quote by placing <code>&gt;</code> at start of line</p></li><li>
+      <p class="mb-2">Backtick escapes <code>`like _this_`</code></p>
+      </li>
+      <li>
+      <p class="mb-2">Create code fences with backticks <code>`</code></p>
+      <pre class="mb-0"><code>```<br/>code here<br/>```</code></pre>
+      </li>
+      </ul>
   pagination:
     prev: Prev
     next: Next
