fix: timezone text format

--- a/i18n/en_US.yaml
+++ b/i18n/en_US.yaml
@@ -1433,6 +1433,7 @@ ui:
       github: GitHub
       blog: Blog
       contact: Contact
+      forum: Forum
       documents: Documents
       feedback: Feedback
       support: Support
