--- a/i18n/zh_CN.yaml
+++ b/i18n/zh_CN.yaml
@@ -1133,6 +1133,15 @@ ui:
     system_setting: System setting
     default: Default
     reset: Reset
+    tag: Tag
+    post_lowercase: 帖子
+    filter: Filter
+    ignore: 忽略
+    submit: 提交
+    normal: 正常
+    closed: 已关闭
+    deleted: 已删除
+    pending: Pending
   search:
     title: 搜索结果
     keywords: 关键词
@@ -1631,8 +1640,8 @@ ui:
       page_title: 编辑
       restrict_answer:
         title: 限制一个回答
-        label: 每个用户对于每个问题只能有一个回答
-        text: "用户可以使用编辑按钮优化已有的回答"
+        label: 每个用户只能为同一问题写一个回答
+        text: "关闭以允许用户对同一问题编写多个回答，这可能会导致回答不集中。"
       recommend_tags:
         label: 推荐标签
         text: "请在上方输入标签固定链接，每行一个标签。"
