--- a/i18n/en_US.yaml
+++ b/i18n/en_US.yaml
@@ -1071,6 +1071,7 @@ ui:
     asked: asked
     update: Modified
     edit: edited
+    commented: commented
     Views: Viewed
     Follow: Follow
     Following: Following
