feat(review): add rank for reviewed user

--- a/i18n/en_US.yaml
+++ b/i18n/en_US.yaml
@@ -496,6 +496,8 @@ backend:
       other: accept
     accepted:
       other: accepted
+    edit:
+      other: edit
   review:
     queued_post:
       other: Queued post
