--- a/i18n/en_US.yaml
+++ b/i18n/en_US.yaml
@@ -1452,6 +1452,7 @@ ui:
       votes: "Votes:"
       users: "Users:"
       flags: "Flags:"
+      reviews: "Reviews:"
       site_health: Site health
       version: "Version:"
       https: "HTTPS:"
