--- a/i18n/bal_BA.yaml
+++ b/i18n/bal_BA.yaml
@@ -708,7 +708,9 @@ ui:
         We've sent an email to that address. Please follow the confirmation instructions.
       email:
         label: Email
-        msg: Email cannot be empty.
+      new_email:
+        label: New email
+        msg: New email cannot be empty.
       password_title: Password
       current_pass:
         label: Current Password
