--- a/i18n/en_US.yaml
+++ b/i18n/en_US.yaml
@@ -1029,6 +1029,8 @@ ui:
         We've sent an email to that address. Please follow the confirmation
         instructions.
       email:
+        label: Email
+      new_email:
         label: New email
         msg: New email cannot be empty.
       pass:
