--- a/i18n/sr_SP.yaml
+++ b/i18n/sr_SP.yaml
@@ -715,7 +715,9 @@ ui:
         We've sent an email to that address. Please follow the confirmation instructions.
       email:
         label: Email
-        msg: Email cannot be empty.
+      new_email:
+        label: New email
+        msg: New email cannot be empty.
       password_title: Password
       current_pass:
         label: Current Password
