--- a/i18n/vi_VN.yaml
+++ b/i18n/vi_VN.yaml
@@ -999,6 +999,8 @@ ui:
       change_email_info: >-
         We've sent an email to that address. Please follow the confirmation instructions.
       email:
+        label: Email
+      new_email:
         label: New email
         msg: New email cannot be empty.
       pass:
