--- a/i18n/no_NO.yaml
+++ b/i18n/no_NO.yaml
@@ -715,7 +715,9 @@ ui:
         We've sent an email to that address. Please follow the confirmation instructions.
       email:
         label: Email
-        msg: Email cannot be empty.
+      new_email:
+        label: New email
+        msg: New email cannot be empty.
       password_title: Password
       current_pass:
         label: Current Password
@@ -811,7 +813,7 @@ ui:
       more: More
     tips:
       title: Advanced Search Tips
-      tag: "<1>[tag]</1> search withing a tag"
+      tag: "<1>[tag]</1> search with a tag"
       user: "<1>user:username</1> search by author"
       answer: "<1>answers:0</1> unanswered questions"
       score: "<1>score:3</1> posts with a 3+ score"
