fix: missing btns.more in i18n

--- a/i18n/en_US.yaml
+++ b/i18n/en_US.yaml
@@ -1199,6 +1199,7 @@ ui:
     closed: Closed
     deleted: Deleted
     pending: Pending
+    more: More
   search:
     title: Search Results
     keywords: Keywords
