New Crowdin updates (#31)
* New translations en_us.yaml (German)

* New translations en_us.yaml (German)

* New translations en_us.yaml (Italian)

* New translations en_us.yaml (Italian)

* New translations en_us.yaml (Russian)

* New translations en_us.yaml (Polish)

* New translations en_us.yaml (Polish)

* New translations en_us.yaml (Romanian)

* New translations en_us.yaml (Romanian)

* New translations en_us.yaml (Russian)

* New translations en_us.yaml (Chinese Traditional)

* New translations en_us.yaml (Chinese Traditional)

* New translations en_us.yaml (German)

* New translations en_us.yaml (Chinese Traditional)

* New translations en_us.yaml (Chinese Simplified)

* New translations en_us.yaml (Chinese Traditional)

* New translations en_us.yaml (German)

* New translations en_us.yaml (Chinese Simplified)

* New translations en_us.yaml (Romanian)

* New translations en_us.yaml (French)

* New translations en_us.yaml (Spanish)

* New translations en_us.yaml (Czech)

* New translations en_us.yaml (Danish)

* New translations en_us.yaml (Italian)

* New translations en_us.yaml (Japanese)

* New translations en_us.yaml (Korean)

* New translations en_us.yaml (Polish)

* New translations en_us.yaml (Portuguese)

* New translations en_us.yaml (Russian)

* New translations en_us.yaml (Slovak)

* New translations en_us.yaml (Swedish)

* New translations en_us.yaml (Turkish)

* New translations en_us.yaml (Ukrainian)

* New translations en_us.yaml (Vietnamese)

* New translations en_us.yaml (Indonesian)

* New translations en_us.yaml (Persian)

* New translations en_us.yaml (Hindi)

* New translations en_us.yaml (Telugu)

* New translations en_us.yaml (Welsh)

--- a/i18n/cs_CZ.yaml
+++ b/i18n/cs_CZ.yaml
@@ -1002,6 +1002,8 @@ ui:
         label: Email
       new_email:
         label: New email
+      new_email:
+        label: New email
         msg: New email cannot be empty.
       pass:
         label: Current password
